# Balatro-Gym

./: .gitignore  AGENTS.md  README.md  balatro_compare.py  balatro_gym.py  balatro_gym_simple.py  balatro_lua_sim.lua  balatro_sim.lua  balatro_sim_dev.lua  build.py  cross_validate.lua  pyproject.toml  requirements.txt  roadmap.md  test_fidelity.py  test_simple_wrapper.py  test_wrapper.py  train.py  translate_jokers.py  validate.lua
.github/workflows/: ci.yml
src/: 00_header.lua  01_enums.lua  02_rng.lua  03_cards.lua  04_jokers.lua  05_consumables.lua  06_evaluator.lua  07_engine.lua  08_state.lua  09_blinds.lua  10_shop.lua  11_observation.lua  12_env.lua  13_test.lua  14_card_factory.lua  15_tags.lua  16_vouchers.lua  17_tags.lua
